--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,3 +78,7 @@ flutter:
     - assets/siemenss.png
     - assets/toyota.png
     - assets/ford.png
+    - assets/offer1.jpg
+    - assets/offer2.jpg
+    - assets/offer3.jpg
+    - assets/offer4.jpg
